--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
                     <a href="create.html">Create</a>
                     <a href="#">Explore</a>
                     <a href="account.html">Sell</a>
-                    <a href="#">Marketplaces</a>
+                    <a href="marketplace.html">Marketplaces</a>
                     <a href="#">Airdrop</a>
                 </div>
             </div>
