--- a/html/account.html
+++ b/html/account.html
@@ -67,10 +67,10 @@
                     <a href="create.html">Create</a>
                     <a href="#">Explore</a>
                     <a href="account.html">Sell</a>
-                    <a href="#">Marketplaces</a>
+                    <a href="marketplace.html">Marketplaces</a>
                     <a href="#">Airdrop</a>
                 </div>
-            </div>
+            </div>1
             <div class="navbar-right">
                 <div class="search-box">
                     <input type="text" placeholder="Search for NFTS, collections, users." class="form-control">
