--- a/html/setup_profile.html
+++ b/html/setup_profile.html
@@ -20,14 +20,14 @@
         <div class="container-fluid">
             <div class="nav-group">
                 <a href="index.html" class="logo-brand">
-                    <img src="../assets/user.png" alt="Logo" width="40">
+                    <img src="../assets/Logo.png" alt="Logo" width="40">
                     <span>NFT Brand</span>
                 </a>
                 <div class="nav-links">
                     <a href="create.html">Create</a>
                     <a href="#">Explore</a>
                     <a href="account.html">Sell</a>
-                    <a href="#">Marketplaces</a>
+                    <a href="marketplace.html">Marketplaces</a>
                     <a href="#">Airdrop</a>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="dropdown">
                     <div class="wallet-dropdown" data-bs-toggle="dropdown">
-                        <img src="../assets/Logo.png" alt="Wallet Avatar" class="wallet-avatar">
+                        <img src="../assets/user.png" alt="Wallet Avatar" class="wallet-avatar">
                         <span id="navbarUsername"></span>
                         <i class="fas fa-chevron-down"></i>
                     </div>
