--- a/html/marketplace.html
+++ b/html/marketplace.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT Marketplace</title>
-    <link rel="stylesheet" href="../css/marketplace.css">
-    <link rel="stylesheet" href="../css/shared_navbar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Thêm các CSS cần thiết -->
+    <link rel="stylesheet" href="../css/shared_navbar.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/marketplace.css">
     <script src="../scripts/wallet_manager.js"></script>
     <script src="../scripts/profile_manager.js"></script>
-
 </head>
 
 <body>
@@ -37,46 +37,42 @@
                     <input type="text" placeholder="Search for NFTS, collections, users." class="form-control">
                     <i class="bi bi-search"></i>
                 </div>
-                <!-- Thay thế phần wallet cũ bằng cấu trúc mới -->
-                <div id="walletSection">
-                    <button id="connectWalletBtn" class="btn btn-outline-success connect-btn" type="button"
-                        onclick="window.location.href='../html/login.html';">
-                        Connect wallet
-                    </button>
-
-                    <div id="walletInfo" class="dropdown" style="display: none;">
-                        <div class="wallet-dropdown" data-bs-toggle="dropdown">
-                            <img src="../assets/user.png" alt="Wallet Avatar" class="wallet-avatar">
-                            <span id="navbarUsername">0x0000...0000</span>
-                            <i class="fas fa-chevron-down"></i>
+                <button id="connectWalletBtn" class="btn btn-outline-success connect-btn" type="button"
+                    onclick="window.location.href='../html/login.html';">
+                    Connect wallet
+                </button>
+                <div class="dropdown" id="walletInfo" style="display: none;">
+                    <div class="wallet-dropdown" data-bs-toggle="dropdown">
+                        <img src="../assets/user.png" alt="Wallet Avatar" class="wallet-avatar">
+                        <span id="navbarUsername"></span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="account.html">
+                            <i class="fas fa-user"></i>
+                            Profile
+                        </a>
+                        <a class="dropdown-item" href="#">
+                            <i class="fas fa-question-circle"></i>
+                            Help Center & Documentation
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <div class="network-item">
+                            Network
+                            <span>Forma</span>
                         </div>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="../html/account.html">
-                                <i class="fas fa-user"></i>
-                                Profile
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-question-circle"></i>
-                                Help Center & Documentation
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <div class="network-item">
-                                Network
-                                <span>Forma</span>
+                        <div class="theme-item">
+                            Theme
+                            <div class="theme-options">
+                                <button class="theme-btn active">Light</button>
+                                <button class="theme-btn">Dark</button>
                             </div>
-                            <div class="theme-item">
-                                Theme
-                                <div class="theme-options">
-                                    <button class="theme-btn active">Light</button>
-                                    <button class="theme-btn">Dark</button>
-                                </div>
-                            </div>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" onclick="disconnectWallet()">
-                                <i class="fas fa-sign-out-alt"></i>
-                                Sign Out
-                            </a>
                         </div>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#" onclick="disconnectWallet()">
+                            <i class="fas fa-sign-out-alt"></i>
+                            Sign Out
+                        </a>
                     </div>
                 </div>
             </div>
@@ -84,10 +80,16 @@
     </nav>
 
     <div class="marketplace-container">
-        <div class="filters-section">
-            <h2>Marketplace</h2>
-            <div class="filters">
-                <select id="sort-filter">
+        <!-- Toolbar với search và filter -->
+        <div class="marketplace-toolbar">
+            <div class="search-filter">
+                <input type="text" class="search-input" placeholder="Search NFTs...">
+                <select class="filter-select">
+                    <option value="all">All Items</option>
+                    <option value="listed">Listed</option>
+                    <option value="sold">Sold</option>
+                </select>
+                <select class="filter-select">
                     <option value="recent">Recently Listed</option>
                     <option value="price-low">Price: Low to High</option>
                     <option value="price-high">Price: High to Low</option>
@@ -95,16 +97,39 @@
             </div>
         </div>
 
-        <div id="nft-grid">
-            <!-- NFTs sẽ được load vào đây -->
-        </div>
-
+        <!-- Loading State -->
         <div id="loading" style="display: none;">
+            <div class="loading-shimmer"></div>
             Loading NFTs...
         </div>
 
+        <!-- No NFTs Message -->
         <div id="no-nfts" style="display: none;">
-            No NFTs currently listed
+            No NFTs For Sale Now
+        </div>
+
+        <!-- NFT Grid -->
+        <div class="nft-grid" id="nft-grid">
+            <!-- NFT Card Template -->
+            <div class="nft-card">
+                <div class="nft-image">
+                    <img src="../assets/placeholder.jpg" alt="NFT">
+                    <div class="nft-status">Listed</div>
+                </div>
+                <div class="nft-info">
+                    <h3>NFT Name</h3>
+                    <div class="nft-creator">
+                        <img class="creator-avatar" src="../assets/default-avatar.png" alt="Creator">
+                        <span class="creator-name">Creator Name</span>
+                    </div>
+                    <div class="nft-price">
+                        <span class="price-label">Price</span>
+                        <span class="price-value">0.5 TIA</span>
+                    </div>
+                    <button class="buy-button">Buy Now</button>
+                </div>
+            </div>
+            <!-- More NFT cards will be added dynamically -->
         </div>
     </div>
 
@@ -118,7 +143,7 @@
         });
     </script>
 
-    
+
     <!-- LOAD PROFILE -->
     <script>
         window.onload = function () {
